# GoidaBot

./: CMakeLists.txt
include/: bot.hpp  config.hpp  curl.hpp  tenor.hpp  utility.hpp
source/: bot.cpp  config.cpp  curl.cpp  main.cpp  tenor.cpp  utility.cpp
